--- a/index.html
+++ b/index.html
@@ -1,13 +1,56 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Motions Page</title>
+  <link rel="stylesheet" href="./src/style.css" />
+</head>
+<body>
+<div class="topnav">
+  <a class="active logo-link" href="#home">
+    <span>Comiee</span>
+    <img src="/logo.png" alt="Logo" class="nav-logo">
+  </a>
+  <div class="nav-right">
+    <a href="#notifications" title="Notifications">Notifications</a>
+    <a href="#settings" title="Settings">Settings</a>
+    <a href="#profile" title="Profile">Profile</a>
+   </div>
+</div>
+<main id="main">
+  <div id="side-bar">
+    Side 
+  </div>
+  <div id="motions-container">
+    <div class="motions-section">
+      <h2 class="section-title">Motions</h2>
+      <div class="motions-grid">
+        <div class="motion-card">
+          <div class="row1">
+            <a class="title" href="#">Motion #1</a>
+          </div>
+          <div class="row2">
+            Description Text.
+          </div>
+          <div class="row3">
+            People.
+          </div>
+        </div>
+        <div class="motion-card">
+          <div class="row1">
+            <a class="title" href="#">Motion #2</a>
+          </div>
+          <div class="row2">
+            Another description.
+          </div>
+          <div class="row3">
+            More people.
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</main>
+</body>
 </html>
