--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             Description Text.
           </div>
           <div class="row3">
-            People.
+            Votes:
           </div>
         </div>
         <div class="motion-card">
@@ -45,7 +45,7 @@
             Another description.
           </div>
           <div class="row3">
-            More people.
+            Votes:
           </div>
         </div>
       </div>
