replaced motions page html with mounted app. Refer to main.jsx

--- a/index.html
+++ b/index.html
@@ -6,51 +6,8 @@
   <title>Motions Page</title>
   <link rel="stylesheet" href="./src/style.css" />
 </head>
+<script type="module" src="/src/main.jsx"></script>
 <body>
-<div class="topnav">
-  <a class="active logo-link" href="#home">
-    <span>Comiee</span>
-    <img src="/logo.png" alt="Logo" class="nav-logo">
-  </a>
-  <div class="nav-right">
-    <a href="#notifications" title="Notifications">Notifications</a>
-    <a href="#settings" title="Settings">Settings</a>
-    <a href="#profile" title="Profile">Profile</a>
-   </div>
-</div>
-<main id="main">
-  <div id="side-bar">
-    Side 
-  </div>
-  <div id="motions-container">
-    <div class="motions-section">
-      <h2 class="section-title">Motions</h2>
-      <div class="motions-grid">
-        <div class="motion-card">
-          <div class="row1">
-            <a class="title" href="#">Motion #1</a>
-          </div>
-          <div class="row2">
-            Description Text.
-          </div>
-          <div class="row3">
-            Votes:
-          </div>
-        </div>
-        <div class="motion-card">
-          <div class="row1">
-            <a class="title" href="#">Motion #2</a>
-          </div>
-          <div class="row2">
-            Another description.
-          </div>
-          <div class="row3">
-            Votes:
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</main>
+  <div id="root"></div>
 </body>
 </html>
