Added login page (incomplete)

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Motions Page</title>
+  <title>Commie</title>
   <link rel="stylesheet" href="./src/style.css" />
 </head>
 <script type="module" src="/src/main.jsx"></script>
